--- a/index.html
+++ b/index.html
@@ -454,28 +454,52 @@
 
         <div class="features">
             <div class="container">
-                <h2 style="text-align: center; margin-bottom: 1rem;">Four Perspectives for Authentic Success</h2>
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon financial">💰</div>
-                        <h3>Financial Perspective</h3>
-                        <p>Build genuine financial security and freedom through thoughtful planning and disciplined wealth creation.</p>
+                <h2 style="text-align: center; margin-bottom: 2rem;">Four Perspectives for Authentic Success</h2>
+                
+                <!-- 2x2 Matrix -->
+                <div class="matrix-container" style="max-width: 800px; margin: 2rem auto; background: var(--bg-primary); padding: 2rem; border-radius: var(--border-radius); box-shadow: var(--shadow-lg);">
+                    <div class="matrix-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2px; background: var(--border-color); border: 2px solid var(--border-color);">
+                        
+                        <!-- Learning & Growth (Top Left) -->
+                        <div class="matrix-cell learning-cell" style="background: linear-gradient(135deg, #3b82f6 0%, #1e40af 100%); color: white; padding: 2rem; min-height: 200px; display: flex; flex-direction: column; justify-content: center; text-align: center;">
+                            <div style="font-size: 2.5rem; margin-bottom: 0.5rem;">📚</div>
+                            <h3 style="margin: 0 0 1rem 0; font-size: 1.3rem;">Learning & Growth</h3>
+                            <p style="margin: 0; opacity: 0.9; font-size: 0.95rem; line-height: 1.4;">Cultivate the skills, knowledge, and capabilities that fuel career advancement and life satisfaction</p>
+                        </div>
+
+                        <!-- Financial (Top Right) -->
+                        <div class="matrix-cell financial-cell" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%); color: white; padding: 2rem; min-height: 200px; display: flex; flex-direction: column; justify-content: center; text-align: center;">
+                            <div style="font-size: 2.5rem; margin-bottom: 0.5rem;">💰</div>
+                            <h3 style="margin: 0 0 1rem 0; font-size: 1.3rem;">Financial Perspective</h3>
+                            <p style="margin: 0; opacity: 0.9; font-size: 0.95rem; line-height: 1.4;">Build genuine financial security and freedom through thoughtful planning and disciplined wealth creation</p>
+                        </div>
+
+                        <!-- Internal Process (Bottom Left) -->
+                        <div class="matrix-cell process-cell" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); color: white; padding: 2rem; min-height: 200px; display: flex; flex-direction: column; justify-content: center; text-align: center;">
+                            <div style="font-size: 2.5rem; margin-bottom: 0.5rem;">⚙️</div>
+                            <h3 style="margin: 0 0 1rem 0; font-size: 1.3rem;">Internal Processes</h3>
+                            <p style="margin: 0; opacity: 0.9; font-size: 0.95rem; line-height: 1.4;">Develop the habits, systems, and routines that create sustainable high performance without burnout</p>
+                        </div>
+
+                        <!-- Stakeholder Relations (Bottom Right) -->
+                        <div class="matrix-cell stakeholder-cell" style="background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%); color: white; padding: 2rem; min-height: 200px; display: flex; flex-direction: column; justify-content: center; text-align: center;">
+                            <div style="font-size: 2.5rem; margin-bottom: 0.5rem;">👥</div>
+                            <h3 style="margin: 0 0 1rem 0; font-size: 1.3rem;">Stakeholder Relations</h3>
+                            <p style="margin: 0; opacity: 0.9; font-size: 0.95rem; line-height: 1.4;">Nurture the relationships that matter most - family, colleagues, and community - for deeper meaning and support</p>
+                        </div>
                     </div>
-                    <div class="feature-card">
-                        <div class="feature-icon learning">📚</div>
-                        <h3>Learning & Growth</h3>
-                        <p>Cultivate the skills, knowledge, and personal capabilities that fuel both career advancement and life satisfaction.</p>
+
+                    <!-- Matrix Labels -->
+                    <div style="position: relative; margin-top: 1rem;">
+                        <div style="position: absolute; top: -220px; left: -60px; writing-mode: vertical-rl; text-orientation: mixed; font-weight: 600; color: var(--text-secondary); font-size: 0.9rem;">FUTURE FOCUSED</div>
+                        <div style="position: absolute; top: -20px; left: -60px; writing-mode: vertical-rl; text-orientation: mixed; font-weight: 600; color: var(--text-secondary); font-size: 0.9rem;">PRESENT FOCUSED</div>
+                        <div style="position: absolute; bottom: -40px; left: 0; right: 50%; text-align: center; font-weight: 600; color: var(--text-secondary); font-size: 0.9rem;">INTERNAL</div>
+                        <div style="position: absolute; bottom: -40px; left: 50%; right: 0; text-align: center; font-weight: 600; color: var(--text-secondary); font-size: 0.9rem;">EXTERNAL</div>
                     </div>
-                    <div class="feature-card">
-                        <div class="feature-icon process">⚙️</div>
-                        <h3>Internal Processes</h3>
-                        <p>Develop the habits, systems, and routines that create sustainable high performance without burnout.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon stakeholder">👥</div>
-                        <h3>Stakeholder Relations</h3>
-                        <p>Nurture the relationships that matter most - family, colleagues, and community - for deeper meaning and support.</p>
-                    </div>
+                </div>
+
+                <div style="text-align: center; margin-top: 2rem;">
+                    <p style="color: var(--text-secondary); max-width: 600px; margin: 0 auto;">The strategic matrix shows how each perspective contributes to your overall success. Balance across all four quadrants creates sustainable, authentic achievement.</p>
                 </div>
             </div>
         </div>
