--- a/index.html
+++ b/index.html
@@ -501,6 +501,30 @@
                 <div style="text-align: center; margin-top: 2rem;">
                     <p style="color: var(--text-secondary); max-width: 600px; margin: 0 auto;">The strategic matrix shows how each perspective contributes to your overall success. Balance across all four quadrants creates sustainable, authentic achievement.</p>
                 </div>
+
+                <!-- Traditional Feature Cards for Mobile/Backup -->
+                <div class="features-grid" style="margin-top: 3rem; display: none;">
+                    <div class="feature-card">
+                        <div class="feature-icon financial">💰</div>
+                        <h3>Financial Perspective</h3>
+                        <p>Build genuine financial security and freedom through thoughtful planning and disciplined wealth creation.</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon learning">📚</div>
+                        <h3>Learning & Growth</h3>
+                        <p>Cultivate the skills, knowledge, and personal capabilities that fuel both career advancement and life satisfaction.</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon process">⚙️</div>
+                        <h3>Internal Processes</h3>
+                        <p>Develop the habits, systems, and routines that create sustainable high performance without burnout.</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon stakeholder">👥</div>
+                        <h3>Stakeholder Relations</h3>
+                        <p>Nurture the relationships that matter most - family, colleagues, and community - for deeper meaning and support.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
