--- a/index.html
+++ b/index.html
@@ -276,17 +276,20 @@
                 </div>
             </div>
         </section>
-
-        <section class="section" style="background: #f8f9fa;">
-            <div class="container">
-                <div style="text-align: center; max-width: 800px; margin: 0 auto;">
-                    <h2 class="section-title">Ready to Transform Your Career?</h2>
-                    <p style="font-size: 1.1rem; margin-bottom: 2rem;">Book a free 30-minute discovery call to explore how we can work together to achieve your career goals.</p>
-                    <!-- FIXED: Button now points to contact.html -->
-                    <a href="contact.html" class="btn btn-primary" style="font-size: 1.1rem; padding: 15px 40px;">Book Your Free Call</a>
-                </div>
+<section class="section" style="background: #f8f9fa;">
+    <div class="container">
+        <div style="text-align: center; max-width: 800px; margin: 0 auto;">
+            <h2 class="section-title">Ready to Transform Your Career?</h2>
+            <p style="font-size: 1.1rem; margin-bottom: 2rem;">Book a free 30-minute discovery call to explore how we can work together to achieve your career goals.</p>
+            
+            <!-- TWO BUTTONS: Let's have a conversation + Explore the tools -->
+            <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                <a href="contact.html" class="btn btn-primary" style="font-size: 1.1rem; padding: 15px 40px;">Let's have a conversation</a>
+                <a href="apps.html" class="btn btn-secondary" style="font-size: 1.1rem; padding: 15px 40px;">Explore the tools</a>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer>
