--- a/index.html
+++ b/index.html
@@ -462,11 +462,11 @@
     </style>
 </head>
 <body>
-    <div class="app-header">
+   <div class="app-header">
     <div class="app-nav">
-        <a href="../index.html" class="site-logo">Senior Academic Transformations</a>
+        <a href="https://hesnrldrs.github.io" class="site-logo">Paul Thomas</a>
         <div class="breadcrumb">
-            <a href="../apps.html">Apps</a> > <span>Life Balance Scorecard</span>
+            <a href="https://hesnrldrs.github.io/#tools">Tools</a> > <span>Personal Balanced Scorecard</span>
         </div>
     </div>
 </div>
